parser/src/snapshots/squawk_parser__parse__tests__parse_set_operations_stmt-2.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: SelectStmt(
                    SelectStmt {
                        distinct_clause: None,
                        into_clause: None,
                        target_list: None,
                        from_clause: None,
                        where_clause: None,
                        group_clause: None,
                        having_clause: None,
                        window_clause: None,
                        values_lists: None,
                        sort_clause: None,
                        limit_offset: None,
                        limit_count: None,
                        locking_clause: None,
                        with_clause: None,
                        op: Union,
                        all: true,
                        larg: Some(
                            SelectStmt(
                                SelectStmt {
                                    distinct_clause: None,
                                    into_clause: None,
                                    target_list: Some(
                                        [
                                            Object({
                                                "ResTarget": Object({
                                                    "location": Number(
                                                        7,
                                                    ),
                                                    "val": Object({
                                                        "ColumnRef": Object({
                                                            "fields": Array([
                                                                Object({
                                                                    "A_Star": Object({}),
                                                                }),
                                                            ]),
                                                            "location": Number(
                                                                7,
                                                            ),
                                                        }),
                                                    }),
                                                }),
                                            }),
                                        ],
                                    ),
                                    from_clause: Some(
                                        Array([
                                            Object({
                                                "RangeVar": Object({
                                                    "inh": Bool(
                                                        true,
                                                    ),
                                                    "location": Number(
                                                        14,
                                                    ),
                                                    "relname": String(
                                                        "table_name",
                                                    ),
                                                    "relpersistence": String(
                                                        "p",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                    ),
                                    where_clause: None,
                                    group_clause: None,
                                    having_clause: None,
                                    window_clause: None,
                                    values_lists: None,
                                    sort_clause: None,
                                    limit_offset: None,
                                    limit_count: None,
                                    locking_clause: None,
                                    with_clause: None,
                                    op: None,
                                    all: false,
                                    larg: None,
                                    rarg: None,
                                },
                            ),
                        ),
                        rarg: Some(
                            SelectStmt(
                                SelectStmt {
                                    distinct_clause: None,
                                    into_clause: None,
                                    target_list: Some(
                                        [
                                            Object({
                                                "ResTarget": Object({
                                                    "location": Number(
                                                        44,
                                                    ),
                                                    "val": Object({
                                                        "ColumnRef": Object({
                                                            "fields": Array([
                                                                Object({
                                                                    "A_Star": Object({}),
                                                                }),
                                                            ]),
                                                            "location": Number(
                                                                44,
                                                            ),
                                                        }),
                                                    }),
                                                }),
                                            }),
                                        ],
                                    ),
                                    from_clause: Some(
                                        Array([
                                            Object({
                                                "RangeVar": Object({
                                                    "inh": Bool(
                                                        true,
                                                    ),
                                                    "location": Number(
                                                        51,
                                                    ),
                                                    "relname": String(
                                                        "table_foo",
                                                    ),
                                                    "relpersistence": String(
                                                        "p",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                    ),
                                    where_clause: None,
                                    group_clause: None,
                                    having_clause: None,
                                    window_clause: None,
                                    values_lists: None,
                                    sort_clause: None,
                                    limit_offset: None,
                                    limit_count: None,
                                    locking_clause: None,
                                    with_clause: None,
                                    op: None,
                                    all: false,
                                    larg: None,
                                    rarg: None,
                                },
                            ),
                        ),
                    },
                ),
                stmt_location: 0,
                stmt_len: Some(
                    62,
                ),
            },
        ),
    ],
)
